added contain methode and edit README.md file

--- a/python/code_challenges/trees/pyproject.toml
+++ b/python/code_challenges/trees/pyproject.toml
@@ -6,6 +6,7 @@ authors = ["mahmoud-dinah <mahmood.dinah2@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.9"
+pyperclip = "^1.8.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
